istio-config/engress.yaml
# Out-going Connections
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: jsontime
spec:
  hosts:
  - api.chatperspot.com
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
