istio-config/ingress.yaml
# In-coming Connections
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: boiler-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apigateway
spec:
  hosts:
  - "*"
  gateways:
  - boiler-gateway
  http:
  - route:
    - destination:
        host: apigateway
        port:
          number: 80
