istio-config/routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apigateway
spec:
  hosts:
  - "*"
  gateways:
  - boiler-gateway
  http:
  - route:
    - destination:
        host: apigateway
        subset: prod
    retries:
      attempts: 3
      perTryTimeout: 2s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: accounts
spec:
  hosts:
  - accounts
  http:
  - route:
    - destination:
        host: accounts
        subset: prod
    retries:
      attempts: 3
      perTryTimeout: 2s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: contacts
spec:
  hosts:
  - contacts
  http:
  - route:
    - destination:
        host: contacts
        subset: prod
    retries:
      attempts: 3
      perTryTimeout: 2s
